--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,22 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+
+    dependencies {
+        classpath "com.android.tools.build:gradle:8.3.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.23"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:11.5.0"
+        // START: FlutterFire Configuration
+        classpath 'com.google.gms:google-services:4.3.10'
+        // END: FlutterFire Configuration
+    }
+}
+
 plugins {
     id "com.android.application"
-    // START: FlutterFire Configuration
-    id 'com.google.gms.google-services'
-    // END: FlutterFire Configuration
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -25,9 +39,13 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+//apply plugin: "com.android.library"
+apply plugin: "kotlin-android"
+apply plugin: "org.jlleitschuh.gradle.ktlint"
+
 android {
     namespace "com.example.android"
-    compileSdk flutter.compileSdkVersion
+    compileSdk 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -37,6 +55,7 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
+        allWarningsAsErrors = true
     }
 
     sourceSets {
@@ -48,7 +67,7 @@ android {
         applicationId "com.example.android"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -67,4 +86,9 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    compileOnly "androidx.annotation:annotation:1.6.0"
+
+    api "com.google.android.gms:play-services-location:21.2.0"
+    implementation "androidx.core:core-ktx:1.10.1"
+}
