--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   flutter_screenutil: ^5.9.0
   firebase_core: ^2.30.0
   firebase_auth: ^4.19.2
+  cloud_firestore: ^4.17.0
+  image_picker: ^1.1.0
+  firebase_storage: ^11.7.2
+  location: ^6.0.1
 
 dev_dependencies:
   flutter_test:
